src/objects/CB_Story__c.object
<CustomObject>
    <description>Each block has one scenario (story) that the player reads. This object stores the stories associated with blocks.</description>
    <fields>
        <fullName>CB_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents the relation to Block object.</description>
        <inlineHelpText>Block to which Story belongs</inlineHelpText>
        <label>Block</label>
        <referenceTo>CB_Block__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_Solution_Data_Type__c</fullName>
        <description>This field represents the configuratble data type. You can configure the solution option type to be shown on UI. We can add more values/configure according to business need.</description>
        <inlineHelpText>This field represents the configuratble data type.</inlineHelpText>
        <label>Solution Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CB_Story_Text__c</fullName>
        <description>Story text for which user has to select solution option.</description>
        <inlineHelpText>Story text for which user has to select solution option.</inlineHelpText>
        <label>Story Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Story - {0000}</displayFormat>
        <label>Story Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>